--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.11.18",
     "pytelegrambotapi>=4.26.0",
+    "python-dotenv>=1.1.0",
 ]
+
+[tool.mypy]
+strict = true
