--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,8 @@
 services:
     bot:
         build: .
+        develop:
+            watch:
+                - action: sync+restart
+                  path: .
+                  target: /enso-bot
