--- a/compose.yaml
+++ b/compose.yaml
@@ -10,3 +10,5 @@ services:
         build: ./db
         environment:
             - POSTGRES_PASSWORD=postgres
+    redis:
+        image: redis:7.4
