--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.11.18",
+    "asyncpg>=0.30.0",
     "pytelegrambotapi>=4.26.0",
     "python-dotenv>=1.1.0",
     "redis>=6.0.0",
