--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiofiles>=24.1.0",
     "aiohttp>=3.11.18",
     "asyncpg>=0.30.0",
     "pytelegrambotapi>=4.26.0",
